# crypto_portfolio

./: .env.example  .gitignore  Procfile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
config/: settings.py  urls.py
config/templates/: 404.html  base.html  home.html  portfolio.html  search.html
config/templates/allauth/account/: login.html  logout.html  password_reset.html  password_reset_done.html  signup.html
portfolio/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
portfolio/helpers/: chart.py  coin_data.py  portfolio.py  scrape_logos.py
portfolio/migrations/: 0001_initial.py  0002_portfolioholdings_type.py  0003_auto_20210320_0153.py  0004_auto_20210320_0248.py  0005_auto_20210321_0152.py  0006_portfolioholdings_amount_in_usd.py  0007_auto_20210326_0009.py  0008_auto_20210326_0010.py
portfolio/templatetags/: tags.py
tests/: conftest.py  test_helpers.py  test_portfolio_class.py  test_views.py
tests/cassettes/: test_coin_data_all_coins.yaml  test_portfolio_coins.yaml  test_single_coin_data[bitcoin-expected1].yaml  test_single_coin_data[ethereum-expected2].yaml  test_single_coin_data[icon-expected0].yaml  test_single_coin_data[polkadot-expected3].yaml  test_single_coin_exchanges.yaml
